# debito_automatico

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pylama.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1b69f2991042_initial_migration.py  58fbe4d0f2ed_initial_migration.py  5e103683d415_initial_migration.py  88b089e18dd4_initial_migration.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/routes/: debits.py  hello_world.py  login.py  ola_mundo.py  users.py
backend/app/core/: celery_app.py  config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_debit.py  crud_user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  debit.py  user.py
backend/app/schemas/: __init__.py  debit.py
backend/app/tasks/: send_email.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_debit.py  test_hello_world.py  test_login.py  test_users.py
backend/app/tests/crud/: test_debit.py  test_user.py
backend/app/tests/tasks/: test_send_email.py
backend/app/tests/utils/: debit.py  user.py  utils.py
locust/: api.py
scripts/: build.sh
