[tool.poetry]
name = "debito_automatico"
version = "0.1"
description = "avaliaçao backend T10"
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
pytest = "^6.2.0"
alembic = "^1.4.3"
SQLAlchemy = "^1.3.20"
uvicorn = "^0.13.1"
psycopg2 = "^2.8.6"
jose = "^1.0.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
